<resources>
    <string name="app_name">Recipes</string>
    <string name="recipe_title">Noodles with chicken</string>
    <string name="cook_duration">45 min</string>
    <string name="score">8.5</string>
    <string name="calories">215 kcal</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="noodle_text">Noodles</string>
    <string name="noodle_weight">400 g</string>
    <string name="butter_text">Butter</string>
    <string name="butter_weight">200 g</string>
    <string name="lemon_text">Lemon</string>
    <string name="lemon_weight">10 g</string>
    <string name="buy_text">Buy</string>
    <string name="start_cooking_text">Start Cooking</string>
</resources>
    